2002-06-08  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Setting up a watch while running export_image.
	* configure.in: Adding a check for libpng when export_png enabled. 

2002-06-07  Anders Eriksson  <anders@poirot.faldor.umunet.org>

	* src/gerbv.c (expose_event): Center distance strings properly,
	  get string height to properly space the two lines independant
	  of the resolution (dpi). Minor cleanups.

2002-06-07  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c, src/gerb_image.h, src/gerber.c: Now handles
	  negative layer polarity (%LP%)! After fixing bug 557368 
	  this was simple to add. Tested with files from PCB.

2002-06-06  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c, src/gerbv_screen.h: Added "reload files", gerbv 
	  rereads all loaded files and display them. Usefull if you have
	  an external gerber manipulation tool.

2002-06-06  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_screen.h: Added a crude measurement tool,
	  renamed screen.zstart_[xy] since they are now used for measure-
	  ment also. To use this tool hold down <SHIFT> while pressing
	  button 1 (the leftmost). This functionality still needs some work.

2002-06-06  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c, src/gerb_image.h, src/gerber.c: Added counting and
	  storing of number of corners in polygons, so drawing of polygons
	  can use dynamically allocated memory. Hard coded array size gave
	  horrible result with submitted file from David Cussans with a lot
	  of corners in the polygons.


2002-06-05  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Added check to autoscale so scale don't screw up
	  everything.
	

2002-06-02  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_image.h, src/gerber.c: Thanks to Stephen Adam I now know
	  what %IC??*% means (Input Code) and have added it to the parser.
	

2002-05-18  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, acconfig.h, src/Makefile.am, src/gerbv.c,